# questions-generator

./: .dockerignore  .env.docker-note.md  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  k.txt
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_mps.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_initial_schema.py  002_add_generations_and_questions.py  003_add_chunks_support.py  004_add_answer_to_questions.py
backend/app/: config.py  database.py  exceptions.py  logging_config.py  main.py
backend/app/api/: __init__.py  generations.py  questions.py  transcriptions.py  videos.py
backend/app/models/: __init__.py  chunk.py  generation.py  question.py  transcription.py  transcription_chunk.py  video.py
backend/app/schemas/: __init__.py  chunk.py  generation.py  question.py  transcription.py  video.py
backend/app/services/: __init__.py  chunk_service.py  ollama_service.py  transcription_service.py  youtube_service.py
backend/app/services/question_generation/: __init__.py  base.py  ollama_provider.py  openrouter_provider.py
backend/app/services/transcription/: __init__.py  base.py  groq_provider.py  whisper_provider.py
backend/app/storage/: .gitkeep
backend/scripts/: .gitignore  README.md  manual_transcribe.py  migrate_to_chunks.py  split.sh  split_audio.py  transcribe.sh
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+33 files in other folders)
